--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "csv-parser": "^3.0.0",
+    "express": "^4.19.2",
+    "iconv-lite": "^0.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
